--- a/src/main/resources/templates/movie-page.html
+++ b/src/main/resources/templates/movie-page.html
@@ -1,157 +1,230 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.thymeleaf.org ">
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org "
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<meta charset="UTF-8">
-<title th:text=${movie.title}></title>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet">
+    <link th:href="@{/styles/css/style.css}" rel="stylesheet"/>
+    <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <title th:text=${movie.title}></title>
 </head>
 <body class="noselect mybody">
-	<div th:insert="/nav::navbar"></div>
-	<div class="containe-fluid">
-		<div class="row">
-			<div class="col-8 mt-3 ms-5">
-				<div class="row p-5 rounded bg-container ">
-					<div class="col-md-3">
-						<div class="MoviePhoto">
-							<img th:src="@{${'/img/' + movie.photoName}}">
-						</div>
-					</div>
-					<div class="col-md-9">
-						<div class="MovieTitle">
-							<span class="text-danger" th:text="${movie.title}"></span>
-						</div>
-						<div class="row">
-							<div class="col-3 font-size-18">
-								<div class="mt-1">
-									<span>Період прокату:</span>
-								</div>
-								<div class="mt-1">
-									<span>Вікове обмеження:</span>
-								</div>
-								<div class="mt-1">
-									<span>Оригінальна назва:</span>
-								</div>
-								<div class="mt-1">
-									<span>Мова:</span>
-								</div>
-								<div class="mt-1">
-									<span>Тривалість:</span>
-								</div>
-								<div class="mt-1">
-									<span>Жанр:</span>
-								</div>
-								<div class="mt-1">
-									<span>Виробництво:</span>
-								</div>
-								<div class="mt-1">
-									<span>Режисер:</span>
-								</div>
-								<div class="mt-1">
-									<span>Студія:</span>
-								</div>
-							</div>
-							<div class="col-8 font-size-18">
-								<div class="mt-1">
-									<span class="val" th:text="${movie.rentalPeriod}"></span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.age}"></span><span
-										class="val">+</span>
-								</div>
-								<div class="mt-1 ">
-									<span class="val" th:text="${movie.originalTitle}"></span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.language}"></span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.duration}"></span><span
-										class="val"> хвилин</span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.genres}"></span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.countries}"></span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.producers}"></span>
-								</div>
-								<div class="mt-1">
-									<span class="val" th:text="${movie.studios}"></span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+<div th:insert="/nav::navbar"></div>
+<div class="container-fluid">
+    <div class="row mb-5">
+        <div class="col-8 mt-3 ms-5 bg-container-color bg-border rounded">
+            <div class="row p-5 rounded-top border-bottom border-secondary ">
+                <div class="col-md-3">
+                    <div class="MoviePhoto">
+                        <img th:src="@{${'/img/' + movie.photoName}}">
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="MovieTitle">
+                        <span class="text-danger" th:text="${movie.title}"></span>
+                    </div>
+                    <div class="row">
+                        <div class="col-3 font-size-18">
+                            <div class="mt-1">
+                                <span>Період прокату:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Вікове обмеження:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Оригінальна назва:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Мова:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Тривалість:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Жанр:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Виробництво:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Режисер:</span>
+                            </div>
+                            <div class="mt-1">
+                                <span>Студія:</span>
+                            </div>
+                        </div>
+                        <div class="col-8 font-size-18">
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.rentalPeriod}"></span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.age}"></span><span
+                                    class="val">+</span>
+                            </div>
+                            <div class="mt-1 ">
+                                <span class="val" th:text="${movie.originalTitle}"></span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.language}"></span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.duration}"></span><span
+                                    class="val"> хвилин</span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.genres}"></span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.countries}"></span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.producers}"></span>
+                            </div>
+                            <div class="mt-1">
+                                <span class="val" th:text="${movie.studios}"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row p-3 bg-container-color text-justify border-bottom border-secondary">
+                <span class="val ms-3" th:text="${movie.description}"></span>
+            </div>
+        </div>
+        <!--<div class="p-3 ">
+            <div class="bg-light">
+                <div class="container-fluid p-3 mt-3 col-8">
+                    <div class="border-bottom border-secondary commets-title mb-2">
+                        <span class="text-info ms-5 h4">Коментарі</span>
+                    </div>
 
-			</div>
-			<div class="col-3 mt-3">
-				<div class="rounded bg-container w-100">
-					<div class="text-info text-center SeanceTitle">Розклад
-						сеансів</div>
-					<div th:each="seance : ${seances}" class="seance-wrapper">
-						<div class="weekday  ms-2">
-							<span class="text-danger" th:text="${seance.key}"></span>
-						</div>
-						<div class="row text-decoration-none">
-							<div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+                    <form th:action="@{/movies/movie/add-comment-process}"
+                          method="POST" th:object=${comment}>
+                        <input type="hidden" th:field="*{idMovie}">
+                        <div class="form-group mt-3">
+                            <textarea class="form-control" th:field="*{info}" rows="2"
+                                      placeholder="Введіть коментар"></textarea>
+                        </div>
+                        <div class="form-group mt-3 d-flex flex-row-reverse">
+                            <input type="submit" class="btn btn-danger" value="Надіслати">
+                        </div>
+                    </form>
+                </div>
 
-								<a th:href="@{${'/seance?id=' + s.id}}"
-									class="btn btn-success seance-text-color"><span
-									th:text="${s.formatTimeStart}"></span></a>
-							</div>
-							<div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+                <div class="container p-3 rounded mt-3 mb-3 col-8 mb-5"
+                     th:if="${comments!=null and !comments.empty}">
+                    <div class="bg-container-color bg-gradient rounded shadow shadow-lg mt-2"
+                         th:each="comment : ${comments}">
+                        <div class="row border-bottom border-success m-2">
+                            <div class="col-3 text-danger">
+                                <span th:text="${comment.name}"></span>
+                            </div>
+                            <div class="col 3 d-flex flex-row-reverse text-info">
+                                <span th:text="${comment.publicationDate}"></span>
+                            </div>
+                            <div class="col-1 d-flex flex-row-reverse text-info"
+                                 sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                <a
+                                        href="@{${/movies/movie/hiddenComment?commentId= + movie.id}}"
+                                        class="btn btn-success"></a>
+                            </div>
+                        </div>
+                        <div class="p-2">
+                            <textarea th:text="${comment.info}" class="form-control"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>-->
+        <div class="col-3 mt-3 d-flex justify-content-end">
+            <div class="rounded bg-container-color w-100 bg-border">
+                <div class="text-info  text-center SeanceTitle">Розклад
+                    сеансів
+                </div>
+                <div th:each="seance : ${seances}" class="seance-wrapper">
+                    <div class="weekday  ms-2">
+                        <span class="text-danger" th:text="${seance.key}"></span>
+                    </div>
+                    <div class="row text-decoration-none">
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
 
-								<a th:href="@{${'/seance?id=' + s.id}}"
-									class="btn btn-success seance-text-color"><span
-									th:text="${s.formatTimeStart}"></span></a>
-							</div>
-							<div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
 
-								<a th:href="@{${'/seance?id=' + s.id}}"
-									class="btn btn-success seance-text-color"><span
-									th:text="${s.formatTimeStart}"></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container p-3 rounded bg-container mt-3 col-4">
-		<div class="border-bottom commets-title mb-2">
-			<span class="text-info ms-5 h4">Коментарі</span>
-		</div>
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
 
-		<form th:action="@{/movies/movie/add-comment-process}" method="POST"
-			th:object=${comment}>
-			<input type="hidden" th:field="*{idMovie}" >
-			<div class="form-group mt-3">
-				<textarea class="form-control" th:field="*{text}" rows="2"
-					placeholder="Введіть коментар"></textarea>
-			</div>
-			<div class="form-group mt-3 d-flex flex-row-reverse">
-				<input type="submit" class="btn btn-danger" value="Надіслати">
-			</div>
-		</form>
-	</div>
-	
-	<div class="container p-3 rounded bg-container  mt-3 mb-3 col-4" th:if="${comments!=null and !comments.empty}">
-		<div class="bg-container bg-gradient rounded shadow shadow-lg mt-2" th:each="comment : ${comments}">
-			<div class="row border-bottom border-success m-2">
-				<div class="col-3 text-danger"><span th:text="${comment.name}"></span></div>
-				<div class="col 3 d-flex flex-row-reverse text-info"><span th:text="${comment.publicationDate}"></span></div>
-			</div>
-			<div class="p-2"><span th:text="${comment.text}"></span></div>
-		</div>
-	</div>
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <div th:each="seance : ${seances}" class="seance-wrapper">
+                    <div class="weekday  ms-2">
+                        <span class="text-danger" th:text="${seance.key}"></span>
+                    </div>
+                    <div class="row text-decoration-none">
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <div th:each="seance : ${seances}" class="seance-wrapper">
+                    <div class="weekday  ms-2">
+                        <span class="text-danger" th:text="${seance.key}"></span>
+                    </div>
+                    <div class="row text-decoration-none">
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                        <div th:each="s : ${seance.value}" class="col-2 mb-2 ms-2">
+
+                            <a th:href="@{${'/seance?id=' + s.id}}"
+                               class="btn btn-success seance-text-color"><span
+                                    th:text="${s.formatTimeStart}"></span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
