--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -10,7 +10,7 @@
 			<li><a href="/movies">Зараз в кіно</a></li>
 			<li><a href="/soon">Скоро у прокаті</a></li>
 			<li><a href="/help">Допомога</a></li>
-			<li><a href="/help">Зворотній зв'язок</a></li>
+			<li><a href="/contact">Зворотній зв'язок</a></li>
 			<li sec:authorize="isAnonymous()">
 				<a href="/login">Вхід</a>
 				<ul class=" text-center">
