--- a/src/main/resources/templates/change-password-page.html
+++ b/src/main/resources/templates/change-password-page.html
@@ -6,7 +6,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
@@ -15,21 +15,24 @@
 <body class="noselect mybody">
 	<div th:insert="/nav::navbar"></div>
 	<div
-		class="bg-light bg-gradient p-3 col-2 mt-5 rounded container text-center border shadow-lg">
-		<form method="POST" th:action="@{/account/save-password}">
+		class="bg-light bg-gradient p-3 col-3 mt-5 rounded container border shadow-lg">
+		<form method="POST" th:action="@{/account/save-password}" th:object="${changePassword}">
 			<div class="form-group m-2">
-				<input type="password" name="oldPassword" class="form-control"
-					placeholder="Старий пароль" required autofocus />
+				<label class="text-danger ps-1" th:if="${#fields.hasErrors('oldPassword')}">Ваш пароль*</label> 
+				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('oldPassword')}">Ваш пароль</label> 
+				<input type="password" name="oldPassword" class="form-control" placeholder="Старий пароль"  th:field="*{oldPassword}"autofocus />
 			</div>
 			<div class="form-group m-2">
-				<input type="password" name="newPassword" class="form-control"
-					placeholder="Новий пароль" required />
+				<label class="text-danger ps-1" th:if="${#fields.hasErrors('newPassword')}">Ваш пароль*</label> 
+				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('newPassword')}">Ваш пароль</label> 
+				<input type="password" name="newPassword" class="form-control" placeholder="Новий пароль" th:field="*{newPassword}"/>
 			</div>
 			<div class="form-group m-2">
-				<input type="password" name="reNewPassword" class="form-control"
-					placeholder="Повторити новий пароль" required />
+				<label class="text-danger ps-1" th:if="${#fields.hasErrors('reNewPassword')}">Повторіть новий пароль*</label> 
+				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('reNewPassword')}">Повторіть новий пароль </label> 
+				<input type="password" name="reNewPassword" class="form-control" placeholder="Повторіть новий пароль" th:field="*{reNewPassword}"/>
 			</div>
-			<div class="form-group m-2">
+			<div class="form-group m-2 text-center">
 				<input type="submit" value="Зберегти" class="btn btn-primary" />
 			</div>
 		</form>
