--- a/src/main/resources/templates/movies-page.html
+++ b/src/main/resources/templates/movies-page.html
@@ -6,7 +6,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
@@ -18,10 +18,10 @@
 	<div class="wrapperMainPage mb-5 mt-3">
 		<div th:each="movie : ${movies}">
 			<a class="poster_fm"
-				th:href="@{${'movies/movie?movieId=' + movie.id}}"
+				th:href="@{${'movies/' + movie.id}}"
 				th:title="${movie.title}"> <img
-				th:src="@{${'/img/' + movie.photoName}}"> <span
-				th:text="${movie.title}"></span>
+				th:src="@{${'/img/' + movie.photoName}}"> 
+				<span th:text="${movie.title}"></span>
 			</a>
 		</div>
 	</div>
