--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -158,7 +158,6 @@ textarea:focus {
 	background-color: #2a2727;
 	display: -webkit-flex;
 	flex-wrap: wrap;
-	margin-top: 1%;
 	align-items: flex-start;
 	border: 1px solid hsla(0, 0%, 100%, .15);
 	border-radius: 2px;
@@ -188,12 +187,31 @@ textarea:focus {
 	margin-bottom: 10px;
 }
 
+.poster_fm a{
+	font-size: 20px;
+	color: #fff;
+	text-decoration: none;
+	transform: scale(1);
+	transition: all 1s ease;
+}
+
+
+
 .poster_fm:hover {
 	color: #E70C2F;
 	text-decoration: none;
 	transform: scale(1.05);
 	transition: all 1s ease;
 }
+
+.poster_fm a:hover {
+	color: #E70C2F;
+	text-decoration: none;
+	transform: scale(1.05);
+	transition: all 1s ease;
+}
+
+
 
 .wrapperMoviePage {
 	float: left;
@@ -205,9 +223,7 @@ textarea:focus {
 	border-radius: 6px 6px 0px 0px;
 }
 
-.MoviePhoto {
-	
-}
+
 
 .MoviePhoto img {
 	width: 260px;
@@ -284,4 +300,93 @@ textarea:focus {
 	stroke-width: 0;
 	stroke: currentColor;
 	fill: currentColor;
+}
+
+.comment-input-field{
+	width:100%;
+	border-top: none;
+    border-left: none;
+    border-right:none;
+}
+
+
+textarea:focus {
+    border-top: none;
+    border-left: none;
+    border-right:none;
+    border-bottom:1px solid white;
+    overflow: auto;
+    outline: none;
+}
+
+
+.screen-title{
+
+  font-weight: bold;
+  font-size:24px;
+}
+
+.screen-seance-page{
+margin:auto;
+  width:80%;
+  height: 10px;
+  border-bottom:2px solid #fff;
+  border-right:2px solid #fff;
+  border-left:2px solid #fff;
+  border-radius:0px 0px 20px 20px;
+  margin-bottom:30px;
+}
+
+.place-btn{
+	width:30px;
+	height:30px;
+}
+
+.lux_btn {
+	width:30px;
+	height:30px;
+    border:none;
+    background-color: #dc3545;
+}
+.default_btn {
+	width:30px;
+	height:30px;
+    border:none;
+    background-color: #0d6efd;
+}
+
+.taken_btn {
+	width:30px;
+	height:30px;
+    border:none;
+    background-color: #6c757d;
+}
+
+.pick_btn {
+	width:30px;
+	height:30px;
+    border:none;
+    background-color: #198754;
+}
+
+.ticket-places{
+  width:100%;
+  height:70px;
+  border-bottom:1px solid hsla(0,0%,100%,.15);
+  background: #403b3b;
+  font-size:20px;
+  line-height:70px;
+}
+
+.border-bottom{
+	border-top: none;
+    border-left: none;
+    border-right:none;
+}
+
+.border-bottom input[type=text]:focus{
+	border-top: none;
+    border-left: none;
+    border-right:none;
+    border-bottom:1px solid white;
 }
