--- a/src/main/resources/templates/account-page.html
+++ b/src/main/resources/templates/account-page.html
@@ -10,20 +10,10 @@
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
-<title>Головна сторінка</title>
+<title>Особиста сторінка</title>
 </head>
 <body class="noselect mybody">
 	<div th:insert="/nav::navbar"></div>
 
-	<div class="wrapperMainPage  mb-5 mt-3">
-		<div th:each="movie : ${movies}" class="poster_fm">
-			<a class="text-decoration-none"
-				th:title="${movie.title}"> <img
-				th:src="@{${'/img/' + movie.photoName}}"> <span
-				th:text="${movie.title}"></span>
-			</a>
-			<div class="text-primary"><span th:text="@{${'з ' + movie.stratRentalDate}}"></span></div>
-		</div>
-	</div>
 </body>
 </html>
