--- a/src/main/resources/templates/contact-page.html
+++ b/src/main/resources/templates/contact-page.html
@@ -7,7 +7,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
@@ -24,32 +24,37 @@
 				class="ms-3 me-3 mb-3 mt-3" th:object=${contact}>
 				
 				<div class="form-group mt-2">
-					<label class="exampleFormControlInput1 text-danger ps-1" th:if="${#fields.hasErrors('name')}">Ваше ім'я</label>
-					<label class="ps-1" th:unless="${#fields.hasErrors('name')}" for="exampleFormControlInput1">Ваше ім'я</label> 
-					<input type="text" class="form-control" placeholder="Ваше ім'я" th:field="*{name}">
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('name')}">Ваше ім'я*</label>
+					<label class="ps-1" th:unless="${#fields.hasErrors('name')}" for="exampleFormControlInput1">Ваше ім'я*</label> 
+					<input type="text" class="form-control" th:field="*{name}">
 				</div>
 				<div class="form-group mt-3">
-					<label class="exampleFormControlInput1 text-danger ps-1" th:if="${#fields.hasErrors('email')}">Ваш Email</label>
-					<label class="ps-1" th:unless="${#fields.hasErrors('email')}" for="exampleFormControlInput1">Ваш Email</label> 
-					<input type="text" class="form-control" placeholder="Ваш Email" th:field="*{email}">
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('email')}">Ваш Email*</label>
+					<label class="ps-1" th:unless="${#fields.hasErrors('email')}" for="exampleFormControlInput1">Ваш Email*</label> 
+					<input type="text" class="form-control" th:field="*{email}">
 				</div>
 				<div class="form-group mt-3">
-					<label class="exampleFormControlInput1 text-danger ps-1" th:if="${#fields.hasErrors('title')}">Тема</label>
-					<label class="ps-1" th:unless="${#fields.hasErrors('title')}" for="exampleFormControlInput1">Тема</label> 
-					<input type="text" class="form-control" placeholder="Тема" th:field="*{title}">
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('phone')}">Ваш номер телефону*</label>
+					<label class="ps-1" th:unless="${#fields.hasErrors('phone')}" for="exampleFormControlInput1">Ваш Номер телефону</label> 
+					<input type="text" class="form-control" th:field="*{phone}">
 				</div>
 				<div class="form-group mt-3">
-					<label class="exampleFormControlInput1 text-danger ps-1" th:if="${#fields.hasErrors('message')}">Повідомлення</label>
-					<label class="ps-1" th:unless="${#fields.hasErrors('message')}" for="exampleFormControlInput1">Повідомлення</label>
-					<textarea class="form-control" rows="2" placeholder="Повідомлення" th:field="*{message}"></textarea>
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('title')}">Тема*</label>
+					<label class="ps-1" th:unless="${#fields.hasErrors('title')}" for="exampleFormControlInput1">Тема*</label> 
+					<input type="text" class="form-control" th:field="*{title}">
+				</div>
+				<div class="form-group mt-3">
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('message')}">Ваше запитання*</label>
+					<label class="ps-1" th:unless="${#fields.hasErrors('message')}" for="exampleFormControlInput1">Ваше запитання*</label>
+					<textarea class="form-control" rows="5" th:field="*{message}"></textarea>
 				</div>
 				<div class="form-group mt-3">
 					<input type="submit" class="btn btn-success col-4"
-						value="Надіслати повідомлення">
+						value="Надіслати">
 				</div>
 				<div class="form-group mt-3 ps-3">
 					<div class="mt-3 mb-4 col-6" th:if="${param.sendMessageSuccess}">
-						<span class="text-success">Повідомлення успішно надіслано.</span>
+						<span class="text-success">Повідомлення успішно надіслано</span>
 					</div>
 				</div>
 			</form>
