--- a/src/main/resources/templates/help-page.html
+++ b/src/main/resources/templates/help-page.html
@@ -6,7 +6,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
