--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -6,7 +6,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
@@ -16,7 +16,11 @@
 	<div th:insert="/nav::navbar"></div>
 	<div
 		class="bg-light bg-gradient p-3 col-2 mt-5 rounded container border shadow-lg">
+		
 		<form method="POST" th:action="@{/process-login}">
+			<div class="text-end">
+				<a class="text-primary text-decoration-none" href="/registration"> Зареєструватись </a>
+			</div>
 			<div class="form-group m-2">
 				<label class="text-danger ps-1" th:if="${param.error}">Email</label>
 				<label class="text-dark ps-1" th:unless="${param.error}">Email</label>
@@ -37,5 +41,6 @@
 			</div>
 		</form>
 	</div>
+	
 </body>
 </html>
