--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -6,7 +6,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
@@ -20,45 +20,30 @@
 		<form method="POST" th:action="@{/process-registration}"
 			th:object="${user}">
 			<div class="form-group m-2">
-				<label class="exampleFormControlInput1 text-danger ps-1"
-					th:if="${#fields.hasErrors('email')}">Ваш Email
-				</label> <label class="text-dark ps-1" th:unless="${#fields.hasErrors('email')}"
-					for="exampleFormControlInput1">Ваш Email</label> <input
-					type="text" name="email" class="form-control"
-					placeholder="E-mail (Обов'язково)" th:field="*{email}" autofocus />
+				<label class="text-danger ps-1" th:if="${#fields.hasErrors('email')}">Ваш Email*</label> 
+				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('email')}" >Ваш Email</label> 
+				<input type="text" name="email" class="form-control" placeholder="E-mail (Обов'язково)" th:field="*{email}" autofocus />
 			</div>
 			<div class="row">
 				<div class="form-group m-2 col">
-					<label class="exampleFormControlInput1 text-danger ps-1"
-						th:if="${#fields.hasErrors('name')}">Ваше ім'я
-					</label> <label class="text-dark ps-1" th:unless="${#fields.hasErrors('name')}"
-						for="exampleFormControlInput1">Ваше ім'я </label> <input
-						type="text" name="name" class="form-control"
-						placeholder="Ім'я (Обов'язково)" th:field="*{name}" autofocus />
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('name')}">Ваше ім'я*</label> 
+					<label class="text-dark ps-1" th:unless="${#fields.hasErrors('name')}">Ваше ім'я </label> 
+					<input type="text" name="name" class="form-control" placeholder="Ім'я (Обов'язково)" th:field="*{name}" autofocus />
 				</div>
 				<div class="form-group m-2 col">
-					<label class="exampleFormControlInput1 text-danger ps-1"
-						th:if="${#fields.hasErrors('surname')}">Ваше прізвище
-					</label> <label class="text-dark ps-1" th:unless="${#fields.hasErrors('surname')}"
-						for="exampleFormControlInput1">Ваше прізвище </label> <input
-						type="text" name="surname" class="form-control"
-						placeholder="Прізвище (Обов'язково)" th:field="*{surname}"
-						autofocus />
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('surname')}">Ваше прізвище*</label> 
+					<label class="text-dark ps-1" th:unless="${#fields.hasErrors('surname')}" >Ваше прізвище </label> 
+					<input type="text" name="surname" class="form-control" placeholder="Прізвище (Обов'язково)" th:field="*{surname}" autofocus />
 				</div>
 			</div>
 			<div class="form-group m-2">
-				<label class="text-dark ps-1" for="exampleFormControlInput1">Ваш номер телефону </label>
-				<input type="text" name="phone" class="form-control"
-					placeholder="Номер телефону (необов'язково)" th:field="*{phone}"
-					autofocus />
+				<label class="text-dark ps-1">Ваш номер телефону </label>
+				<input type="text" name="phone" class="form-control" placeholder="Номер телефону (необов'язково)" th:field="*{phone}" autofocus />
 			</div>
 			<div class="form-group m-2">
-					<label class="exampleFormControlInput1 text-danger ps-1"
-						th:if="${#fields.hasErrors('surname')}">Пароль
-					</label> <label class="text-dark ps-1" th:unless="${#fields.hasErrors('surname')}"
-						for="exampleFormControlInput1">Пароль </label>
-				<input type="password" name="password" class="form-control"
-					placeholder="Пароль (Обов'язково)" th:field="*{password}" />
+				<label class=" text-danger ps-1" th:if="${#fields.hasErrors('surname')}">Пароль*</label> 
+				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('surname')}" >Пароль </label>
+				<input type="password" name="password" class="form-control" placeholder="Пароль (Обов'язково)" th:field="*{password}" />
 			</div>
 			<div class="form-group m-2 text-center">
 				<input type="submit" value="Зарєструватись" class="btn btn-primary" />
