--- a/src/main/resources/templates/seance-page.html
+++ b/src/main/resources/templates/seance-page.html
@@ -1,20 +1,111 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.thymeleaf.org ">
+	xsi:schemaLocation="http://www.thymeleaf.org "
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link th:href="@{/styles/css/style.css}" rel="stylesheet" />
+<link href="/css/style.css" rel="stylesheet"/>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
-<title>Сеанс</title>
+<title th:text="${movie.title}"></title>
 </head>
 <body class="noselect mybody">
 	<div th:insert="/nav::navbar"></div>
-	
-	
+	<div class="m-5 d-flex justify-content-center">
+		<div class="col-7 bg-container-color bg-border rounded p-4 me-5 h-100 d-inline-block">
+
+			<div class="row d-flex justify-content-center">
+				<div class="col-2 " th:each="rank : ${placeRank}">
+					<div class="val">
+						<span th:text="${rank.rankName}"></span> <label class="form-label"
+							th:text="${rank.addictionalCost + seance.price + 'грн'}"></label>
+					</div>
+					<th:block th:switch="${rank.id}">
+						<div th:case="1" class="p-4 btn btn-danger"></div>
+						<div th:case="2" class="p-4 btn btn-primary"></div>
+						<div th:case="3" class="p-4 btn btn-wrong"></div>
+						<div th:case="4" class="p-4 btn btn-dark"></div>
+					</th:block>
+
+				</div>
+				<div class="col-2">
+					<label class="form-label val">Вибране</label>
+					<div class="p-4 btn btn-success"></div>
+				</div>
+				<div class="col-2">
+					<label class="form-label val">Зайняте</label>
+					<div class="p-4 btn btn-secondary"></div>
+				</div>
+			</div>
+
+			<div class="screen-title text-center val">
+				<span>Екран</span>
+			</div>
+			<div class="screen-seance-page"></div>
+			<!--Screen-->
+			<div class="text-center text-info mb-3">За один раз можна придбати не більше 5 квитків</div>
+			<div th:each="place : ${places}">
+				<div class="row d-flex justify-content-center">
+						<form method="POST" th:action="@{${'/movies/' + movie.id + '/seance/' + seance.id + '/pick-seat'}}" th:each="p : ${place.value}" th:switch=${p.idRank} class="place-btn m-1">
+							<input type="hidden" th:name ="seatId" th:value="${p.id}">
+							<input type="submit" th:if="${p.seatStatus == 0}"  th:case="1" class="lux_btn rounded" value="" th:title="@{${'Ряд: ' + place.key + ', місце: ' + p.number}}">
+							<input type="submit" th:if="${p.seatStatus == 0}"  th:case="2" class="default_btn rounded"  value="" th:title="@{${'Ряд: ' + place.key + ', місце: ' + p.number}}">
+							<input type="submit" th:if="${p.seatStatus == 1}" class="taken_btn rounded"  value="" th:title="@{${'Ряд: ' + place.key + ', місце: ' + p.number}}">
+							<input type="submit" th:if="${p.seatStatus == 2}" class="pick_btn rounded"  value="" th:title="@{${'Ряд: ' + place.key + ', місце: ' + p.number}}">
+						</form>
+				</div>
+			</div>
+			<!-- Places -->
+		</div>
+		<div class="col-3 bg-container-color bg-border rounded h-50">
+			<div class="text-center">
+				<div class="m-3">
+					<span class="h4 val" th:text="${movie.title}"></span>
+				</div>
+				<img th:src="@{${'/img/' + movie.photoName}}">
+				<div class="mt-2">
+					<span class="h5 val"
+						th:text="@{${'Зал: ' + hall.name + '. Загальна кількість місць: ' + hall.numberOfSeat}}"></span>
+				</div>
+				<div class="">
+						<div th:each="p : ${pickPlace}" class="ticket-places">
+							<span th:text="@{${'Ряд: ' + p.row}}"></span>
+							<span th:text="@{${'Місце: ' + p.number}}"></span>
+							<span th:text="@{${'Вартість: ' + p.price+'грн.'}}"></span>
+						</div>
+						<div class="ticket-places" th:if="${pickPlace.size > 0}">
+							<span>Сума всіх білетів: </span><span th:text="${sumAllTickets+'грн.'}" class="text-danger"></span>
+						</div>	
+						<div class="d-flex justify-content-center">
+							<div sec:authorize="isAuthenticated()" class="m-3 h6">
+								<form th:action="@{${'/movies/' + movie.id + '/seance/' + seance.id + '/buy-ticket'}}" th:object="${bonusDto}">
+									<div class="form-check form-switch" th:if="${user.bonuse > 0}">
+										<input type="checkbox" class="form-check-input" th:field="*{confirm}">
+										 <label class="form-check-label" for="flexSwitchCheckDefault">Використати бонуси 
+										 	<span class="text-primary" th:text="@{${'(всього: ' + user.bonuse + ')'}}"></span>
+										 </label>
+									</div>
+									<input type="submit" class="btn btn-success" value="Придбати">
+								</form>
+								<div class="text-center mt-3 pt-3 h5 border-top" th:if="${param.notSeatSelect}">
+									<span class="text-danger ">Виберіть місце</span>
+								</div>
+							</div>
+						</div>
+						<div class="form-check form-switch m-3 h6"
+							sec:authorize="!isAuthenticated()">
+							<span>Для того, щоб придбати білети необхідно
+								</span> <a href="/login"
+								class="text-danger text-decoration-none"> Авторизуватись</a>
+						</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
 </body>
 </html>
