--- a/src/main/resources/templates/success-buy-ticket.html
+++ b/src/main/resources/templates/success-buy-ticket.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.thymeleaf.org ">
+	xsi:schemaLocation="http://www.thymeleaf.org "
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -10,20 +11,12 @@
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
-<title>Головна сторінка</title>
+<title>Квитки успішно придбанні</title>
 </head>
-<body class="noselect mybody">
+<body>
 	<div th:insert="/nav::navbar"></div>
-
-	<div class="wrapperMainPage">
-		<div th:each="movie : ${movies}">
-			<a class="poster_fm"
-				th:href="@{${'/clevercinema/movies/movie?id=' + movie.id}}"
-				th:title="${movie.title}"> <img
-				th:src="@{${'/img/' + movie.photoName}}"> <span
-				th:text="${movie.title}"></span>
-			</a>
-		</div>
+	<div class="mt-5 text-center">
+		<span class="text-success display-4">Квитки успішно придбані і будуть надіслані на пошту протягом 5 хвилин</span>
 	</div>
 </body>
 </html>
