--- a/src/main/resources/templates/movie-page.html
+++ b/src/main/resources/templates/movie-page.html
@@ -76,8 +76,7 @@
 									<span class="val" th:text="${movie.language}"></span>
 								</div>
 								<div class="mt-1">
-									<span class="val" th:text="${movie.duration}"></span><span
-										class="val"> хв.</span>
+									<span class="val" th:text="${movie.duration}"></span><span class="val"> хв.</span>
 								</div>
 								<div class="mt-1">
 									<span class="val" th:text="${movie.genres}"></span>
