--- a/src/main/resources/templates/account-page.html
+++ b/src/main/resources/templates/account-page.html
@@ -6,7 +6,7 @@
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 	rel="stylesheet">
-<link href="/css/style.css" rel="stylesheet"/>
+<link href="/css/style.css" rel="stylesheet" />
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <meta charset="UTF-8">
@@ -15,5 +15,17 @@
 <body class="noselect mybody">
 	<div th:insert="/nav::navbar"></div>
 
+	<div class="container d-flex justify-content-center mt-3">
+		<div class="row col-8 bg-container-color bg-border rounded p-3">
+			<div class="col-3">
+				<img class="img-thumbnail" src="/img/users/DefaultUser.jpg">
+			</div>
+			<div class="col-8">
+				t
+				UserName
+			</div>
+		</div>
+
+	</div>
 </body>
 </html>
