--- a/src/main/resources/templates/admin-movie-page.html
+++ b/src/main/resources/templates/admin-movie-page.html
@@ -23,7 +23,7 @@
 				<div
 					class="bg-light bg-gradient rounded mt-5 mb-5 ms-2 me-2 p-3 shadow-lg border">
 					<div class="text-center h4 m-2 border-bottom">
-						<span>Основна інформації</span>
+						<span>Додавання фільму</span>
 					</div>
 					<form th:object="${movie}" method="POST"
 						th:action="@{${'/admin/movies/' + movie.id + '/save'}}">
