--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -25,7 +25,7 @@
 				</ul>
 			</li>
 			<li sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_ROOT')">
-				<a href="/admin">Адмін панель</a>
+				<a href="/admin/movies">Адмін панель</a>
 			</li>
 		</ul>
 	</nav>
