--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -20,18 +20,18 @@
 		<form method="POST" th:action="@{/process-registration}"
 			th:object="${user}">
 			<div class="form-group m-2">
-				<label class="text-danger ps-1" th:if="${#fields.hasErrors('email')}">Ваш Email*</label> 
+				<label class="text-danger ps-1" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></label> 
 				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('email')}" >Ваш Email</label> 
 				<input type="text" name="email" class="form-control" placeholder="E-mail (Обов'язково)" th:field="*{email}" autofocus />
 			</div>
 			<div class="row">
 				<div class="form-group m-2 col">
-					<label class="text-danger ps-1" th:if="${#fields.hasErrors('name')}">Ваше ім'я*</label> 
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></label> 
 					<label class="text-dark ps-1" th:unless="${#fields.hasErrors('name')}">Ваше ім'я </label> 
 					<input type="text" name="name" class="form-control" placeholder="Ім'я (Обов'язково)" th:field="*{name}" autofocus />
 				</div>
 				<div class="form-group m-2 col">
-					<label class="text-danger ps-1" th:if="${#fields.hasErrors('surname')}">Ваше прізвище*</label> 
+					<label class="text-danger ps-1" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></label> 
 					<label class="text-dark ps-1" th:unless="${#fields.hasErrors('surname')}" >Ваше прізвище </label> 
 					<input type="text" name="surname" class="form-control" placeholder="Прізвище (Обов'язково)" th:field="*{surname}" autofocus />
 				</div>
@@ -41,8 +41,8 @@
 				<input type="text" name="phone" class="form-control" placeholder="Номер телефону (необов'язково)" th:field="*{phone}" autofocus />
 			</div>
 			<div class="form-group m-2">
-				<label class=" text-danger ps-1" th:if="${#fields.hasErrors('surname')}">Пароль*</label> 
-				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('surname')}" >Пароль </label>
+				<label class=" text-danger ps-1" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></label> 
+				<label class="text-dark ps-1" th:unless="${#fields.hasErrors('password')}" >Пароль </label>
 				<input type="password" name="password" class="form-control" placeholder="Пароль (Обов'язково)" th:field="*{password}" />
 			</div>
 			<div class="form-group m-2 text-center">
